Mini browser immediately hit an assertion in debug build https://bugs.webkit.org/show_bug.cgi?id=209575

Reviewed by Simon Fraser.

Use 1 instead of 0 as the desination ID to avoid hitting assertions.

* WebProcess/GPU/media/RemoteAudioSession.cpp:
(WebKit::RemoteAudioSession::RemoteAudioSession):
(WebKit::RemoteAudioSession::~RemoteAudioSession):


Canonical link: https://commits.webkit.org/222506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259028 268f45cc-cd09-0410-ab3c-d52691b4dbfc